# open-whisper

./: .editorconfig  .gitignore  .swift-format  .swiftlint.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  appcast.xml  deny.toml  lefthook.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/open-whisper-desktop/: Cargo.toml
apps/open-whisper-desktop/src/: autostart.rs  desktop_integration.rs  dictation.rs  main.rs  model_manager.rs  permission_diagnostics.rs  text_inserter.rs  ui_theme.rs
apps/open-whisper-linux/: Cargo.toml
apps/open-whisper-linux/src/: app.rs  bridge.rs  hotkey.rs  i18n.rs  main.rs  state.rs  tray.rs
apps/open-whisper-linux/src/ui/: main_window.rs  mod.rs  settings_window.rs
apps/open-whisper-linux/src/ui/settings/: dashboard.rs  diagnostics.rs  help.rs  hotkey_recorder.rs  language_models.rs  mod.rs  recording.rs  start_behavior.rs
apps/open-whisper-macos/: Package.resolved  Package.swift
apps/open-whisper-macos/Bridge/: OpenWhisperBridgeFFI.h  module.modulemap
apps/open-whisper-macos/Resources/: AppIcon.icns  Info.plist
apps/open-whisper-macos/Resources/Localizations/de.lproj/: InfoPlist.strings
apps/open-whisper-macos/Resources/Localizations/en.lproj/: InfoPlist.strings
apps/open-whisper-macos/Sources/OpenWhisperMac/: AppDelegate.swift  AppModel.swift  AppUIComponents.swift  BridgeClient.swift  BridgeModels.swift  FeedbackView.swift  HotkeyAssignmentAdvisor.swift  HotkeyRecorderField.swift  LanguageModelsManagerSheet.swift  Localization.swift  OnboardingView.swift  OpenWhisperMacApp.swift  RecordingIndicatorView.swift  SettingsView.swift  UpdaterController.swift  UpdatesSettingsView.swift
apps/open-whisper-macos/Sources/OpenWhisperMac/Resources/: Localizable.xcstrings
apps/open-whisper-macos/Sources/OpenWhisperMac/Resources/de.lproj/: Localizable.strings
apps/open-whisper-macos/Sources/OpenWhisperMac/Resources/en.lproj/: Localizable.strings
apps/open-whisper-macos/Tests/OpenWhisperMacTests/: BridgeIntegrationTests.swift  SmokeTests.swift
crates/open-whisper-bridge/: Cargo.toml
crates/open-whisper-bridge/src/: autostart.rs  dictation.rs  lib.rs  llm_model_manager.rs  local_llm.rs  model_manager.rs  permission_diagnostics.rs  post_processing.rs  remote_models.rs  settings_store.rs  text_inserter.rs
crates/open-whisper-core/: Cargo.toml
crates/open-whisper-core/src/: lib.rs
docs/: ARCHITECTURE.md  CI.md  DEVELOPMENT.md  INSTALL.md  LINUX.md  RELEASING.md
docs/superpowers/plans/: 2026-04-18-sparkle-auto-updates.md
docs/superpowers/specs/: 2026-04-18-sparkle-auto-updates-design.md
scripts/: _appcast_insert.py  build-dmg.sh  build-macos-app.sh  codesign-macos.sh  dev-linux.sh  dev.sh  generate-placeholder-icon.swift  run-macos-native.sh  smoke-test-dmg.sh  update-appcast.sh
