[workspace]
members = [
    "crates/open-whisper-bridge",
    "crates/open-whisper-core",
    "apps/open-whisper-linux",
]
default-members = [
    "crates/open-whisper-bridge",
    "crates/open-whisper-core",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
