[package]
name = "open-whisper-desktop"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
cpal = "0.17.3"
directories = "6.0.0"
eframe = "0.34.1"
global-hotkey = "0.7.0"
open-whisper-core = { path = "../../crates/open-whisper-core" }
serde_json = "1.0.149"
tray-icon = "0.22.0"
whisper-rs = "0.16.0"
