[package]
name = "open-whisper-desktop"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
arboard = "3.6.1"
auto-launch = "0.6.0"
cpal = "0.17.3"
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["wayland"] }
eframe = "0.34.1"
global-hotkey = "0.7.0"
open-whisper-core = { path = "../../crates/open-whisper-core" }
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
serde_json = "1.0.149"
tray-icon = "0.22.0"
whisper-rs = "0.16.0"
