[package]
name = "open-whisper-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open Whisper — GTK4/libadwaita desktop shell for Linux"
default-run = "open-whisper-linux"

[[bin]]
name = "open-whisper-linux"
path = "src/main.rs"

[dependencies]
open-whisper-bridge = { path = "../../crates/open-whisper-bridge" }
open-whisper-core = { path = "../../crates/open-whisper-core" }

gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"

anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Linux-only integrations. macOS/Windows builds of this crate skip them so the
# developer can still run `cargo check` on a non-Linux host during UI work.
[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"
# `async-std` routes zbus through the `async-io` reactor, which
# co-operates with GLib's MainContext (we `spawn_local` onto it).
# `gtk4` adds WindowIdentifier integration for parent-window hints.
# The default `tokio` feature would demand a running Tokio runtime
# which this shell deliberately doesn't spin up.
ashpd = { version = "0.10", default-features = false, features = ["async-std", "gtk4"] }
global-hotkey = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
# Needed for `select!` + stream combinators in the hotkey portal loop.
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await-macro"] }
