[package]
name = "open-whisper-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
arboard = "3.6.1"
auto-launch = "0.6.0"
cpal = "0.17.3"
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["wayland"] }
global-hotkey = "0.7.0"
once_cell = "1.21.3"
open-whisper-core = { path = "../open-whisper-core" }
reqwest = { version = "0.13.2", features = ["blocking", "json", "rustls"] }
serde.workspace = true
serde_json = "1.0.149"
whisper-rs = "0.16.0"
